1. Modified the UI.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="purple_dark">#2D0B2D</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#009933</color>
+    <color name="red">#FF1A1A</color>
 </resources>
